Minor Changes: Badges

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,14 @@ table{
     font-size: 8.7pt;
 }
 
-.badge-Website{
-    color: aqua;
+.word-break {
+    word-break:normal;
+}
+
+.Dashboard {
+
+}
+
+.Platformitself {
+    
 }
