--- a/datatables/datatables.css
+++ b/datatables/datatables.css
@@ -4736,10 +4736,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+  color: #852339;
   text-decoration: none;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #852339;
 }
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
@@ -4757,9 +4757,9 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #23527c;
-  background-color: #eee;
-  border-color: #ddd;
+  color: #eee;
+  background-color: #666;
+  border-color: #666;
 }
 .pagination > .active > a,
 .pagination > .active > span,
@@ -4768,10 +4768,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
   z-index: 3;
-  color: #fff;
+  color: #eee;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #852339;
+  border-color: #852339;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
