--- a/templates/table.html
+++ b/templates/table.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../datatables/datatables.css">
     <link rel="stylesheet" href="../css/main.css">
+    <!--<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">-->
     <script type="text/javascript" src="../datatables/jQuery-3.3.1/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="../datatables/datatables.js"></script>
     <script type="text/javascript" src="../js/main.js"></script>
-
   </head>
   <body>
     <div class="d-flex" id="wrapper">
@@ -29,12 +29,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link home-link" href="#">People-Analytics Wiki <span class="sr-only">(current)</span></a>
+                <a class="nav-link home-link" href="home.html">People-Analytics Wiki <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
               </li>
-              <li class="nav-item dropdown">
+              <!--<li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Dropdown
                 </a>
@@ -46,7 +46,7 @@
 
                 </div>
 
-              </li>              
+              </li>-->              
 
             </ul>
             <form class="form-inline my-2 my-lg-0 navbar-search pull-right">
@@ -60,8 +60,24 @@
         <div class="container-fluid table-whole-screen">
       <h1>Overview of People Analytics Software-Vendors</h1>
       <span style="width:100%">
-      <table class="table table-striped table-bordered table-responsive" id="dtBasicExample" cellspacing="0" width="100%">
-  
+
+      
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Toggle Columns
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            {% for row in data[0]%}
+              {% if loop.index0!=0%}
+                <a class="dropdown-item toggle-vis" data-column="{{loop.index0-1}}">{{row}}</a>
+              {% endif%}
+            {% endfor %}
+          </div>
+        </div>
+      
+
+      <table class="table table-striped table-bordered table-responsive display" id="dtBasicExample" cellspacing="0" width="100%" data-mobile-responsive="true">
+
         <thead class="thead-ercis">
           {%for row in data[0]%}
             {%if loop.index0!=0%}
@@ -90,10 +106,10 @@
                   {%if "&" in row[_] or " or " in row[_] or " and " in row[_] or ", " in row[_] %}
                     {% set sub = row[_].replace(" or ", "&").replace(", ","&").replace(" and ", "&").split("&") %}
                     {%for row in sub %}
-                      <span class="badge {{row.replace(' ','').replace('(','').replace(')','')}}">{{row}}</span>
+                      <span class="badge {{row.replace(' ','').replace('(','').replace(')','').lower()}}">{{row}}</span>
                     {% endfor %}
                   {%else%}
-                    <span class="badge {{row[_].replace(' ','').replace('(','').replace(')','')}}">{{row[_]}}</span>
+                    <span class="badge {{row[_].replace(' ','').replace('(','').replace(')','').lower()}}">{{row[_]}}</span>
                   {% endif %}
                 {% else %}
                   {{row[_]}}
