--- a/templates/singlePageTemplate.html
+++ b/templates/singlePageTemplate.html
@@ -2,7 +2,7 @@
 <meta charset="ANSI">
 <html>
   <head>
-    <title>Jinja Template Example</title>
+    <title>People Analytics Wiki - {{data[1]}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -16,22 +16,10 @@
 <body>
   <div class="d-flex" id="wrapper">
 
-    <!-- Sidebar -->
-    <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">People Analytics Wiki</div>
-      <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Vendors</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Applications</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Categories</a>
-      </div>
-    </div> 
-    <!-- /#sidebar-wrapper -->
-
     <!-- Page Content -->
     <div id="page-content-wrapper">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">  
+      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom bg-primary">  
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,38 +27,32 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link home-link" href="home.html">People-Analytics Wiki <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-
-              </div>
-
-            </li>              
-
           </ul>
           <form class="form-inline my-2 my-lg-0 navbar-search pull-right">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2 btn-search-navbar" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0 btn-search-navbar" type="submit">Search</button>
         </form>
         </div>
       </nav>
 
       <div class="container-fluid">
         <h1>{{data[1]}}</h1>
-        {% for row in data %}
-          {{row}}<br>
-        {% endfor %}
+        <table class="table table-striped table-bordered table-responsive display">
+          <thead class="thead-ercis">
+            <th class="th-sm">Aspect</th>
+            <th class="th-sm">Description</th>
+          </thead>
+          {% for row in data %}
+            {% if loop.index0!=0%}
+            <tr>
+              <td>{{head[loop.index0]}}</td>
+              <td>{{row}}</td>
+            </tr>
+            {%endif%}
+          {% endfor %}
+        </table>
       </div>
 </div>
       
