--- a/templates/table.html
+++ b/templates/table.html
@@ -3,7 +3,8 @@
 <meta charset="ANSI">
 <html>
   <head>
-    <title>Jinja Template Example</title>
+    <link rel="icon" type="image/svg+xml" href="../resources/target.svg" sizes="any">
+    <title> People Analytics Wiki</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -13,6 +14,7 @@
     <script type="text/javascript" src="../datatables/jQuery-3.3.1/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="../datatables/datatables.js"></script>
     <script type="text/javascript" src="../js/main.js"></script>
+
   </head>
   <body>
     <div class="d-flex" id="wrapper">
@@ -27,32 +29,28 @@
           </button>
   
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0  align-items-center col-sm-12">
+              <li class="nav-item active col-sm-6">
                 <a class="nav-link home-link" href="home.html">People-Analytics Wiki <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+
+              <li class="pull-right col-sm-6 align-self-center">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0  align-items-center pull-right">
+                  <li class="nav-item active">
+                    <a href="" class="nav-link">Help</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a href="" class="nav-link">About</a>
+                  </li>
+                  <li class="pull-right">
+                    <form class="form-inline my-2 my-lg-0 navbar-search pull-right">
+                      <input class="form-control mr-sm-2 btn-search-navbar" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success my-2 my-sm-0 btn-search-navbar" type="submit">Search</button>
+                    </form>
+                  </li>
+                </ul>
               </li>
-              <!--<li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-
-                </div>
-
-              </li>-->              
-
             </ul>
-            <form class="form-inline my-2 my-lg-0 navbar-search pull-right">
-              <input class="form-control mr-sm-2 btn-search-navbar" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0 btn-search-navbar" type="submit">Search</button>
-          </form>
           </div>
         </nav>
   
@@ -61,7 +59,7 @@
       <h1>Overview of People Analytics Software-Vendors</h1>
       <span style="width:100%">
 
-      
+      <!-- Haken adden-->
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Toggle Columns
@@ -76,17 +74,17 @@
         </div>
       
 
-      <table class="table table-striped table-bordered table-responsive display" id="dtBasicExample" cellspacing="0" width="100%" data-mobile-responsive="true">
+      <table class="table table-striped table-bordered table-responsive display" id="dtBasicExample" cellspacing="0" data-mobile-responsive="true">
 
         <thead class="thead-ercis">
           {%for row in data[0]%}
             {%if loop.index0!=0%}
           <th class="th-sm" >
-            <div data-toggle="tooltip" data-placement="bottom" title="{{data[1][loop.index0]}}">
+            <span data-toggle="tooltip" data-placement="bottom" title="{{data[1][loop.index0]}}" class="myTooltip">
 
                 {{row}}
 
-            </div>
+            </span>
           </th>
             {% endif %}
           {%endfor%}
