--- a/templates/table.html
+++ b/templates/table.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <meta charset="ANSI">
 <html>
-  <head>
-    <link rel="icon" type="image/svg+xml" href="../resources/target.svg" sizes="any">
+  <head profile="http://www.w3.org/2005/10/profile">
     <title> People Analytics Wiki</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.css">
@@ -14,62 +13,34 @@
     <script type="text/javascript" src="../datatables/jQuery-3.3.1/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="../datatables/datatables.js"></script>
     <script type="text/javascript" src="../js/main.js"></script>
-
+    {% include 'head.html' %}
   </head>
   <body>
     <div class="d-flex" id="wrapper">
-
-  
       <!-- Page Content -->
-      <div id="page-content-wrapper">
-  
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom bg-primary">  
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-  
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0  align-items-center col-sm-12">
-              <li class="nav-item active col-sm-6">
-                <a class="nav-link home-link" href="home.html">People-Analytics Wiki <span class="sr-only">(current)</span></a>
-              </li>
-
-              <li class="pull-right col-sm-6 align-self-center">
-                <ul class="navbar-nav ml-auto mt-2 mt-lg-0  align-items-center pull-right">
-                  <li class="nav-item active">
-                    <a href="" class="nav-link">Help</a>
-                  </li>
-                  <li class="nav-item active">
-                    <a href="" class="nav-link">About</a>
-                  </li>
-                  <li class="pull-right">
-                    <form class="form-inline my-2 my-lg-0 navbar-search pull-right">
-                      <input class="form-control mr-sm-2 btn-search-navbar" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success my-2 my-sm-0 btn-search-navbar" type="submit">Search</button>
-                    </form>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </nav>
-  
-  
+      <div id="page-content-wrapper"> 
+          {% include 'navbar.html' %}
         <div class="container-fluid table-whole-screen">
       <h1>Overview of People Analytics Software-Vendors</h1>
       <span style="width:100%">
-
-      <!-- Haken adden-->
-        <div class="dropdown">
+        <div id="teaser">
+          This table gives an overview of the most important People Analytics Software-Vendors. The table contains all available information about the vendors. Further, the table offers the function to toggle columns individually. You can search for a certain attribute by simply typing in your search term in the search field below. Additionally, you can order the table according the different features in the table heads. By clicking on a specific software vendor you can see the details about this software. Please note: if you have a samll display, it might be possible that not all columns are visible without scrolling.
+        </div>
+        <br>
+        <div class="dropdown" id="toggle-dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Toggle Columns
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             {% for row in data[0]%}
               {% if loop.index0!=0%}
-                <a class="dropdown-item toggle-vis" data-column="{{loop.index0-1}}">{{row}}</a>
+                <a class="dropdown-item toggle-vis" data-column="{{loop.index0-1}}">{{row}}<span id="column-{{loop.index0-1}}" class="pull-right check-toggle"></span></a>
               {% endif%}
             {% endfor %}
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item toggle-vis" data-column="999">Show all</a>
+            <a class="dropdown-item toggle-vis" data-column="998">Hide all</a>
+            <a class="dropdown-item toggle-vis" data-column="997">Show default</a>
           </div>
         </div>
       
