--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,10 +12,10 @@
         <li class="pull-right col-sm-6 align-self-center">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0  align-items-center pull-right">
             <li class="nav-item active">
-              <a href="" class="nav-link site-link">Help</a>
+              <a href="help.html" class="nav-link site-link">Help</a>
             </li>
             <li class="nav-item active">
-              <a href="" class="nav-link site-link">About</a>
+              <a href="about.html" class="nav-link site-link">About</a>
             </li>
             <li class="pull-right">
               <form class="form-inline my-2 my-lg-0 navbar-search pull-right">
