--- a/templates/table.html
+++ b/templates/table.html
@@ -22,9 +22,10 @@
           {% include 'navbar.html' %}
         <div class="container-fluid table-whole-screen">
       <h1>Overview of People Analytics Software-Vendors</h1>
+      <hr>
       <span style="width:100%">
         <div id="teaser">
-          This table gives an overview of the most important People Analytics Software-Vendors. The table contains all available information about the vendors. Further, the table offers the function to toggle columns individually. You can search for a certain attribute by simply typing in your search term in the search field below. Additionally, you can order the table according the different features in the table heads. By clicking on a specific software vendor you can see the details about this software. Please note: if you have a samll display, it might be possible that not all columns are visible without scrolling.
+          This table gives an overview of the most important People Analytics Software-Vendors. The table contains all available information about the vendors. Further, the table offers the function to toggle columns individually. You can search for a certain attribute by simply typing in your search term in the search field below. Additionally, you can order the table according the different features in the table heads. By clicking on a specific software vendor you can see the details about this software. Hovering over the table head will show you a short explanation about the property in this column. Please note: if you have a small display, it might be possible that not all columns are visible without scrolling. 
         </div>
         <br>
         <div class="dropdown" id="toggle-dropdown">
