Csv files changed

--- a/templates/singlePageTemplate.html
+++ b/templates/singlePageTemplate.html
@@ -21,7 +21,7 @@
     <div id="page-content-wrapper">
       {% include 'navbar.html' %}
       <div class="container-fluid">
-        <a href="index.html">Back</a>
+        <a href="index.html"><i class="fas fa-chevron-left"></i> Back</a>
         <h1>{{data[1]}}</h1>
         <table class="table table-striped table-bordered table-responsive display">
           <thead class="thead-ercis">
