--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,10 @@ a {
     color: #852339;
 }
 
+#search-navbar {
+    margin-left: 10px;
+}
+
 .btn-search-navbar:hover {
     background-color: #666;
     color: white;
@@ -97,7 +101,6 @@ a {
 
 .site-link {
     margin-right: 5px;
-    padding-left:5px;
     padding-right: 5px;
 }
 
