--- a/templates/singlePageTemplate.html
+++ b/templates/singlePageTemplate.html
@@ -26,14 +26,15 @@
         <table class="table table-striped table-bordered table-responsive display">
           <thead class="thead-ercis">
             <th class="th-sm">Aspect</th>
-            <th class="th-sm">Description</th>
-            <th clsss="th-sm">Extent</th>
+            <th clsss="th-sm">Description</th>
           </thead>
           {% for row in data %}
             {% if loop.index0!=0%}
             <tr>
-              <td>{{head[loop.index0]}}</td>
-              <td>{{tooltip[loop.index0]}}</td>
+              <td>
+                <div data-toggle="tooltip" data-placement="bottom" title="{{tooltip[loop.index0]}}" class="myTooltip">
+                  {{head[loop.index0]}}</td>
+                </div>
               <td>{{row}}</td>
             </tr>
             {%endif%}
