updated about, removed help, added footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,10 +11,10 @@
         <div class="col-md-6 mt-md-0 mt-3">
   
           <!-- Content -->
-          <h5 class="text-uppercase font-weight-bold">Footer text 1</h5>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil
-            repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae
-            harum esse fugiat. Itaque, culpa?</p>
+          <h5 class="text-uppercase font-weight-bold">People Analytics Wiki</h5>
+          <p>
+            Despite people analytics being a hype topic and attracting attention from both academia and practice, we found only few academic studies on the topic, with practitioners driving discussions and the development of the field. To better understand people analytics and the role of information technology, we performed a thorough evaluation of the available software tools. We monitored social media to identify and analyze the 41 people analytics tools listed here.
+          </p>
   
         </div>
         <!-- Grid column -->
@@ -25,10 +25,10 @@
         <div class="col-md-6 mb-md-0 mb-3">
   
           <!-- Content -->
-          <h5 class="text-uppercase font-weight-bold">Footer text 2</h5>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum
-            commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id
-            excepturi hic.</p>
+          <h5 class="text-uppercase font-weight-bold">ERCIS Competence Center Smarter Work</h5>
+          <p>
+            The Competence Center Smarter Work supports organizations with the introduction, use and management of new communication and collaboration systems. We build on years of experience with transformation processes towards “Smarter Work”. We integrate individual and organizational perspectives in our research projects, inquiring about employees who use new technologies in their everyday work. Our research is characterized by the pursuit of long-term improvements. To this end, we seek a focused understanding of underlying organizational problems before pointing out customized options for action. Made possible by an interdisciplinary team of scientists from business, computer science, psychology, sociology, as well as practitioners from the IT industry.
+          </p>
   
         </div>
         <!-- Grid column -->
@@ -40,8 +40,8 @@
     <!-- Footer Text -->
   
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+    <div class="footer-copyright text-center py-3">
+      &copy; 2020 Institut für Wirtschaftsinformatik, European Research Center for Information Systems, Competence Center Smarter Work
     </div>
     <!-- Copyright -->
   
