--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,50 @@
 <h1>About</h1>
 
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
+<h2>People Analytics Vendor Study</h2>
 
-    Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,</p>
+<p>
 
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
+People analytics is gaining momentum. Defined as “socio-technical systems and associated processes that enable data-driven (or algorithmic) decision-making to improve people-related organizational outcomes”, people analytics seeks to provide actionable insights on the link between people behaviors and performance grounded in the collection and analysis of quantifiable behavioral constructs.
 
-    Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,</p>
+Applications of people analytics are found in the digitization of the human resources function, which seeks to substitute intuition-based decisions through data-driven solutions. For example, Amazon tried to complement their hiring process with an AI solution, resulting in considerable controversy; and HireVue offers an AI solution to analyze video interviews. However, the application of people analytics is not limited to the human resources function. Swoop offers social insights on engagement and collaboration for employees and managers alike; and Humanyze hands out sociometric badges to employees to measure and analyze any part of business operations, meticulously.
+
+Defying the growing concerns about algorithmic decision making and privacy, while sidelining questions about the validity of the computational approaches amidst issues of algorithmic discrimination and bias, people analytics gathers a growing interest in academic and professional communities. Tursunbayeva et al. attest the topic a continuously growing popularity based on a Google Trends query and depict an increasing number of publications in recent years. In 2017, people analytics made a first appearance on the main stage of the information systems discipline with a publication at the premier International Conference on Information Systems, before being problematized at further outlets.
+
+In our study, we addressed these questions by looking at the IT artifact and reviewing available people analytics tools. To this end, we monitored social media, mailing lists, and influencers for five months in 2019 to collect a sample of 41 people analytics tools. Two researchers coded the tools based on a coding scheme developed in an earlier work.
+
+Our goal was to enhance the understanding of people analytics by shining light into the available IT artifacts. By clarifying what solutions are being sold as “people analytics”, we sought to understand better what people analytics is. Since people analytics is a novel topic for the information systems discipline, we related our results to the established discourse. We hope to provide a basis for information systems scholars to make sense of people analytics, and guide subsequent conversations and research into the topic.
+
+</p>
+
+<p>
+
+The study will be presented at the premier German information systems conference: Wirtschaftinformatik 2021.
+
+</p>
+
+<p>
+ Hüllmann, J. A., Krebber, S., & Troglauer, P. (2021). The IT Artifact in People Analytics: Reviewing the Tools to Understand a Nascent Field. In Proceedings of the 16th International Conference on Wirtschaftsinformatik, Duisburg-Essen, Germany.
+</p>
+
+<h2>Competence Center Smarter Work</h2>
+
+<p>
+
+New technologies are increasingly used in dynamic organizations and change how work is organized and performed, for example, in virtual or distributed teams with flexible working hours and work locations. “Smarter Work” describes an approach of designing these new ways of working, supported by communication and collaboration systems, with a strong emphasis on the well-being and productivity of all actors involved. We help exploiting the potentials of new working modes by means of a conscious and coordinated use of technologies and aligning digital as well as analogous work.
+
+</p>
+
+<p>
+
+The Competence Center Smarter Work supports organizations with the introduction, use and management of new communication and collaboration systems. We build on years of experience with transformation processes towards “Smarter Work”. We integrate individual and organizational perspectives in our research projects, inquiring about employees who use new technologies in their everyday work. Our research is characterized by the pursuit of long-term improvements. To this end, we seek a focused understanding of underlying organizational problems before pointing out customized options for action. Our recommendations are based on established scientific approaches. We combine a broad repertoire of methods (e.g., surveys, interviews, physiological measurements, digital forensics) with traditional and innovative theories, which allow us to understand and answer complex questions about the organization of work. This is made possible by an interdisciplinary team of scientists from business, computer science, psychology, sociology, as well as practitioners from the IT industry.
+
+</p>
+
+<h2>Contact &amp; Imprint</h2>
+
+<p>
+    This website is covered by the <a href="https://www.smarter-work.de/legal-notice">imprint of the competence center smarter work</a>.
+</p>
+<p>    
+    The content is curated by Joschka A. Hüllmann. For inquiries of any kind, please contact Joschka via his <a href="http://www.erc.is/p/huellmann">contact details</a> from the University of Münster.
+</p>
