about and imprint and footer

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,6 @@
+
+<div class="about-box">
+
 <h1>About</h1>
 
 <h2>People Analytics Vendor Study</h2>
@@ -6,23 +9,27 @@
 
 People analytics is gaining momentum. Defined as “socio-technical systems and associated processes that enable data-driven (or algorithmic) decision-making to improve people-related organizational outcomes”, people analytics seeks to provide actionable insights on the link between people behaviors and performance grounded in the collection and analysis of quantifiable behavioral constructs.
 
+<p></p>
+
 Applications of people analytics are found in the digitization of the human resources function, which seeks to substitute intuition-based decisions through data-driven solutions. For example, Amazon tried to complement their hiring process with an AI solution, resulting in considerable controversy; and HireVue offers an AI solution to analyze video interviews. However, the application of people analytics is not limited to the human resources function. Swoop offers social insights on engagement and collaboration for employees and managers alike; and Humanyze hands out sociometric badges to employees to measure and analyze any part of business operations, meticulously.
+
+<p></p>
 
 Defying the growing concerns about algorithmic decision making and privacy, while sidelining questions about the validity of the computational approaches amidst issues of algorithmic discrimination and bias, people analytics gathers a growing interest in academic and professional communities. Tursunbayeva et al. attest the topic a continuously growing popularity based on a Google Trends query and depict an increasing number of publications in recent years. In 2017, people analytics made a first appearance on the main stage of the information systems discipline with a publication at the premier International Conference on Information Systems, before being problematized at further outlets.
 
+<p></p>
+
 In our study, we addressed these questions by looking at the IT artifact and reviewing available people analytics tools. To this end, we monitored social media, mailing lists, and influencers for five months in 2019 to collect a sample of 41 people analytics tools. Two researchers coded the tools based on a coding scheme developed in an earlier work.
+
+<p></p>
 
 Our goal was to enhance the understanding of people analytics by shining light into the available IT artifacts. By clarifying what solutions are being sold as “people analytics”, we sought to understand better what people analytics is. Since people analytics is a novel topic for the information systems discipline, we related our results to the established discourse. We hope to provide a basis for information systems scholars to make sense of people analytics, and guide subsequent conversations and research into the topic.
 
-</p>
-
-<p>
+</p><p>
 
 The study will be presented at the premier German information systems conference: Wirtschaftinformatik 2021.
 
-</p>
-
-<p>
+</p><p>
  Hüllmann, J. A., Krebber, S., & Troglauer, P. (2021). The IT Artifact in People Analytics: Reviewing the Tools to Understand a Nascent Field. In Proceedings of the 16th International Conference on Wirtschaftsinformatik, Duisburg-Essen, Germany.
 </p>
 
@@ -46,5 +53,7 @@ The Competence Center Smarter Work supports organizations with the introduction,
     This website is covered by the <a href="https://www.smarter-work.de/legal-notice">imprint of the competence center smarter work</a>.
 </p>
 <p>    
-    The content is curated by Joschka A. Hüllmann. For inquiries of any kind, please contact Joschka via his <a href="http://www.erc.is/p/huellmann">contact details</a> from the University of Münster.
+    The content is curated by <a href="https://www.joschka-huellmann.net">Joschka A. Hüllmann</a>. For inquiries of any kind, please contact Joschka via his <a href="http://www.erc.is/p/huellmann">contact details</a> from the University of Münster.
 </p>
+
+</div>
