--- a/templates/footer_vendors.html
+++ b/templates/footer_vendors.html
@@ -42,7 +42,9 @@
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">
       &copy; 2020 Institut für Wirtschaftsinformatik, European Research Center for Information Systems, Competence Center Smarter Work
-      <a class="nav-link site-link" href="about.html">Go to About, Contact, Imprint &amp; Legal</a>
+    </div>
+    <div>
+      <a href="../about.html">Imprint</a>
     </div>
     <!-- Copyright -->
   
