--- a/templates/singlePageTemplate.html
+++ b/templates/singlePageTemplate.html
@@ -43,7 +43,7 @@
         </table>
       </div>
 
-      {% include 'footer.html' %}
+      {% include 'footer_vendors.html' %}
 
     </div>
   </div>      
