--- a/css/main.css
+++ b/css/main.css
@@ -172,3 +172,11 @@ hr {
 #teaser {
     max-width: 1024px;
 }
+
+@media only screen and (min-width: 768px) {
+    .about-box {
+        margin-left: 25%;
+        margin-right: 25%;
+        margin-bottom: 75px;
+    }
+}
