--- a/templates/head.html
+++ b/templates/head.html
@@ -5,4 +5,5 @@
 <link rel="mask-icon" href="../resources/icon/safari-pinned-tab.svg" color="#000000">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
+<meta charset="utf-8">
 <script src="https://kit.fontawesome.com/e9b2e2d0cb.js" crossorigin="anonymous"></script>
