restore accidently deleted csv files and fix resource paths again

--- a/templates/contentPage.html
+++ b/templates/contentPage.html
@@ -4,14 +4,14 @@
   <head profile="http://www.w3.org/2005/10/profile">
     <title> People Analytics Wiki</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../datatables/datatables.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="datatables/datatables.css">
+    <link rel="stylesheet" href="css/main.css">
     <!--<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">-->
-    <script type="text/javascript" src="../datatables/jQuery-3.3.1/jquery-3.3.1.js"></script>
-    <script type="text/javascript" src="../datatables/datatables.js"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="datatables/jQuery-3.3.1/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="datatables/datatables.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     {% include 'head.html' %}
   </head>
   <body>
