added tools view to nav button

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,9 @@
         <li class="pull-right col-sm-6 align-self-center">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0 align-items-center pull-right">
             <li class="nav-item active">
+              <a href="index.html" class="nav-link site-link">Vendors</a>
+            </li>
+            <li class="nav-item active">
               <a href="academics.html" class="nav-link site-link">Academics</a>
             </li>
             <li class="nav-item active">
