--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 
 <h1>About</h1>
 
-<h2>People Analytics Vendor Study</h2>
+<h2>People Analytics Study</h2>
 
 <p>
 
@@ -27,10 +27,14 @@ Our goal was to enhance the understanding of people analytics by shining light i
 
 </p><p>
 
-The study will be presented at the premier German information systems conference: Wirtschaftinformatik 2021.
+The latest part of the study will be presented at the premier German information systems conference: Wirtschaftinformatik 2021.
 
 </p><p>
- Hüllmann, J. A., Krebber, S., & Troglauer, P. (2021). The IT Artifact in People Analytics: Reviewing the Tools to Understand a Nascent Field. In Proceedings of the 16th International Conference on Wirtschaftsinformatik, Duisburg-Essen, Germany.
+ <b>Hüllmann, J. A., Krebber, S., & Troglauer, P. (2021). The IT Artifact in People Analytics: Reviewing the Tools to Understand a Nascent Field. In Proceedings of the 16th International Conference on Wirtschaftsinformatik, Duisburg-Essen, Germany.</b>
+</p><p>
+ Hüllmann, J. A., & Mattern, J. (2020). Three Issues with the State of People and Workplace Analytics. In Proceedings of the 33rd Bled eConference, Bled, Slovenia. 
+</p><p>
+ Hüllmann, J. A., & Krebber, S. (2021). Status Quo of People Analytics in Academia and Practice: Exhaustive Review and Morphological Box (Running Head). Preprint.
 </p>
 
 <h2>Competence Center Smarter Work</h2>
